--- a/frontend/res/styles/strategy_market.less
+++ b/frontend/res/styles/strategy_market.less
@@ -3,7 +3,7 @@
     display: inline-block;
     background-color: rgba(255, 242, 181, 1);
     margin: 10px 15px;
-    padding: 10px;
+    padding: 10px 20px;
     width: 350px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, .3);
 
