--- a/frontend/res/views/strategy.html
+++ b/frontend/res/views/strategy.html
@@ -22,6 +22,9 @@
             <button type="button" class="btn btn-info" v-on:click="historyClick">
                 <i class="mdi mdi-history"></i> 回测历史记录
             </button>
+            <button type="button" class="btn btn-primary" v-on:click="marketClick">
+                <i class="mdi mdi-shopping"></i> 策略市场
+            </button>
         </div>
         <div class="col-md-9 col-lg-10 right">
             <div v-if="selected >= 0">
@@ -149,6 +152,9 @@
             methods: {
                 historyClick: function () {
                     app.views.load('backtest_history', {});
+                },
+                marketClick: function () {
+                    app.views.load('strategy_market', {});
                 },
                 addParam: function (e) {
                     this.detail.params.push({var: '', default: '', description: ''});
