--- a/frontend/res/styles/forum.css
+++ b/frontend/res/styles/forum.css
@@ -31,6 +31,12 @@
 #view_forum .card .content {
   margin-top: 10px;
 }
+#view_forum .card .tag {
+  margin-top: 10px;
+  width: 100%;
+  padding: 5px 10px;
+  background-color: #e0e0e0;
+}
 #view_forum .new {
   margin-top: 20px;
 }
