--- a/frontend/res/styles/forum.less
+++ b/frontend/res/styles/forum.less
@@ -37,6 +37,13 @@
     .content {
       margin-top: 10px;
     }
+
+    .tag {
+      margin-top: 10px;
+      width: 100%;
+      padding: 5px 10px;
+      background-color: #e0e0e0;
+    }
   }
 
   .new {
